// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataExtractor empty data set processing should generated the expected results 1`] = `
{
  "aggregation": undefined,
  "columnNeedValueOf": [
    false,
    false,
    false,
    false,
  ],
  "columnScopes": [
    Set {
      "test",
    },
    Set {
      "test",
    },
    Set {
      "test",
    },
    Set {
      "test",
    },
  ],
  "columns": [
    [],
    [],
    [],
    [],
  ],
  "dataSources": Map {
    "test" => [],
  },
  "defs": {
    "allScopesHaveSameDefs": true,
    "keys": [
      {
        "index": 0,
        "missing": Map {},
        "property": "year",
        "scopes": [
          "test",
        ],
        "type": "key",
        "valueType": "category",
      },
    ],
    "values": [
      {
        "groupId": undefined,
        "id": undefined,
        "index": 0,
        "missing": Map {},
        "property": "ie",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
      {
        "groupId": undefined,
        "id": undefined,
        "index": 1,
        "missing": Map {},
        "property": "chrome",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
      {
        "groupId": undefined,
        "id": undefined,
        "index": 2,
        "missing": Map {},
        "property": "firefox",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
      {
        "groupId": undefined,
        "id": undefined,
        "index": 3,
        "missing": Map {},
        "property": "safari",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "valueType": "range",
      },
    ],
  },
  "domain": {
    "keys": [
      [],
    ],
    "values": [
      [],
      [],
      [],
      [],
    ],
  },
  "input": {
    "count": 0,
  },
  "invalidData": Map {},
  "invalidDataCount": Map {},
  "invalidKeyCount": Map {},
  "invalidKeys": Map {},
  "keys": [
    Map {
      "test" => [],
    },
  ],
  "optimizations": Any<Object>,
  "partialValidDataCount": 0,
  "scopes": Set {
    "test",
  },
  "time": Any<Number>,
  "type": "ungrouped",
  "version": Any<Number>,
  Symbol(domain-ranges): Map {},
  Symbol(key-sort-orders): Map {},
  Symbol(column-sort-orders): Map {},
  Symbol(domain-bands): Map {},
  Symbol(reducer-bands): Map {},
}
`;

exports[`DataExtractor missing and invalid data processing - multiple scopes should generated the expected results 1`] = `
{
  "aggregation": undefined,
  "columnNeedValueOf": [
    false,
    false,
    false,
    false,
  ],
  "columnScopes": [
    Set {
      "test",
    },
    Set {
      "series-a",
    },
    Set {
      "series-b",
    },
    Set {
      "series-c",
    },
  ],
  "columns": [
    [
      null,
      54.39,
      44.03,
      undefined,
      null,
      17.75,
      -13.3,
      -8.94,
      null,
      3.2,
      2.7,
    ],
    [
      undefined,
      null,
      15.01,
      25.99,
      31.71,
      null,
      42.27,
      47.79,
      51.76,
      null,
      61.72,
    ],
    [
      26.85,
      31.15,
      null,
      22.69,
      undefined,
      14.77,
      null,
      8.97,
      6.75,
      undefined,
      null,
    ],
    [
      2.79,
      4.22,
      5.94,
      null,
      undefined,
      12.63,
      undefined,
      null,
      14.54,
      14.44,
      15.23,
    ],
  ],
  "dataSources": Map {
    "test" => [
      {
        "chrome": "illegal value",
        "firefox": 26.85,
        "safari": 2.79,
        "year": "2009",
      },
      {
        "firefox": 31.15,
        "ie": 54.39,
        "safari": 4.22,
        "year": "2010",
      },
      {
        "chrome": 15.01,
        "ie": 44.03,
        "safari": 5.94,
        "year": "2011",
      },
      {
        "chrome": 25.99,
        "firefox": 22.69,
        "ie": "illegal value",
        "year": "2012",
      },
      {
        "chrome": 31.71,
        "firefox": undefined,
        "safari": undefined,
        "year": "2013",
      },
      {
        "firefox": 14.77,
        "ie": 17.75,
        "safari": 12.63,
        "year": "2014",
      },
      {
        "chrome": 42.27,
        "ie": -13.3,
        "safari": "illegal value",
        "year": "2015",
      },
      {
        "chrome": 47.79,
        "firefox": 8.97,
        "ie": -8.94,
        "year": "2016",
      },
      {
        "chrome": 51.76,
        "firefox": 6.75,
        "safari": 14.54,
        "year": "2017",
      },
      {
        "firefox": "illegal value",
        "ie": 3.2,
        "safari": 14.44,
        "year": "2018",
      },
      {
        "chrome": 61.72,
        "ie": 2.7,
        "safari": 15.23,
        "year": "2019",
      },
    ],
    "series-a" => [
      {
        "chrome": "illegal value",
        "firefox": 26.85,
        "safari": 2.79,
        "year": "2009",
      },
      {
        "firefox": 31.15,
        "ie": 54.39,
        "safari": 4.22,
        "year": "2010",
      },
      {
        "chrome": 15.01,
        "ie": 44.03,
        "safari": 5.94,
        "year": "2011",
      },
      {
        "chrome": 25.99,
        "firefox": 22.69,
        "ie": "illegal value",
        "year": "2012",
      },
      {
        "chrome": 31.71,
        "firefox": undefined,
        "safari": undefined,
        "year": "2013",
      },
      {
        "firefox": 14.77,
        "ie": 17.75,
        "safari": 12.63,
        "year": "2014",
      },
      {
        "chrome": 42.27,
        "ie": -13.3,
        "safari": "illegal value",
        "year": "2015",
      },
      {
        "chrome": 47.79,
        "firefox": 8.97,
        "ie": -8.94,
        "year": "2016",
      },
      {
        "chrome": 51.76,
        "firefox": 6.75,
        "safari": 14.54,
        "year": "2017",
      },
      {
        "firefox": "illegal value",
        "ie": 3.2,
        "safari": 14.44,
        "year": "2018",
      },
      {
        "chrome": 61.72,
        "ie": 2.7,
        "safari": 15.23,
        "year": "2019",
      },
    ],
    "series-b" => [
      {
        "chrome": "illegal value",
        "firefox": 26.85,
        "safari": 2.79,
        "year": "2009",
      },
      {
        "firefox": 31.15,
        "ie": 54.39,
        "safari": 4.22,
        "year": "2010",
      },
      {
        "chrome": 15.01,
        "ie": 44.03,
        "safari": 5.94,
        "year": "2011",
      },
      {
        "chrome": 25.99,
        "firefox": 22.69,
        "ie": "illegal value",
        "year": "2012",
      },
      {
        "chrome": 31.71,
        "firefox": undefined,
        "safari": undefined,
        "year": "2013",
      },
      {
        "firefox": 14.77,
        "ie": 17.75,
        "safari": 12.63,
        "year": "2014",
      },
      {
        "chrome": 42.27,
        "ie": -13.3,
        "safari": "illegal value",
        "year": "2015",
      },
      {
        "chrome": 47.79,
        "firefox": 8.97,
        "ie": -8.94,
        "year": "2016",
      },
      {
        "chrome": 51.76,
        "firefox": 6.75,
        "safari": 14.54,
        "year": "2017",
      },
      {
        "firefox": "illegal value",
        "ie": 3.2,
        "safari": 14.44,
        "year": "2018",
      },
      {
        "chrome": 61.72,
        "ie": 2.7,
        "safari": 15.23,
        "year": "2019",
      },
    ],
    "series-c" => [
      {
        "chrome": "illegal value",
        "firefox": 26.85,
        "safari": 2.79,
        "year": "2009",
      },
      {
        "firefox": 31.15,
        "ie": 54.39,
        "safari": 4.22,
        "year": "2010",
      },
      {
        "chrome": 15.01,
        "ie": 44.03,
        "safari": 5.94,
        "year": "2011",
      },
      {
        "chrome": 25.99,
        "firefox": 22.69,
        "ie": "illegal value",
        "year": "2012",
      },
      {
        "chrome": 31.71,
        "firefox": undefined,
        "safari": undefined,
        "year": "2013",
      },
      {
        "firefox": 14.77,
        "ie": 17.75,
        "safari": 12.63,
        "year": "2014",
      },
      {
        "chrome": 42.27,
        "ie": -13.3,
        "safari": "illegal value",
        "year": "2015",
      },
      {
        "chrome": 47.79,
        "firefox": 8.97,
        "ie": -8.94,
        "year": "2016",
      },
      {
        "chrome": 51.76,
        "firefox": 6.75,
        "safari": 14.54,
        "year": "2017",
      },
      {
        "firefox": "illegal value",
        "ie": 3.2,
        "safari": 14.44,
        "year": "2018",
      },
      {
        "chrome": 61.72,
        "ie": 2.7,
        "safari": 15.23,
        "year": "2019",
      },
    ],
  },
  "defs": {
    "allScopesHaveSameDefs": false,
    "keys": [
      {
        "index": 0,
        "missing": Map {},
        "property": "year",
        "scopes": [
          "test",
        ],
        "type": "key",
        "valueType": "category",
      },
    ],
    "values": [
      {
        "groupId": undefined,
        "id": undefined,
        "index": 0,
        "missing": Map {},
        "missingValue": null,
        "property": "ie",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "validation": [Function],
        "valueType": "range",
      },
      {
        "groupId": undefined,
        "id": undefined,
        "index": 1,
        "missing": Map {},
        "missingValue": null,
        "property": "chrome",
        "scopes": [
          "series-a",
        ],
        "type": "value",
        "useScopedValues": false,
        "validation": [Function],
        "valueType": "range",
      },
      {
        "groupId": undefined,
        "id": undefined,
        "index": 2,
        "missing": Map {},
        "missingValue": null,
        "property": "firefox",
        "scopes": [
          "series-b",
        ],
        "type": "value",
        "useScopedValues": false,
        "validation": [Function],
        "valueType": "range",
      },
      {
        "groupId": undefined,
        "id": undefined,
        "index": 3,
        "missing": Map {},
        "missingValue": null,
        "property": "safari",
        "scopes": [
          "series-c",
        ],
        "type": "value",
        "useScopedValues": false,
        "validation": [Function],
        "valueType": "range",
      },
    ],
  },
  "domain": {
    "keys": [
      [
        "2009",
        "2010",
        "2011",
        "2012",
        "2013",
        "2014",
        "2015",
        "2016",
        "2017",
        "2018",
        "2019",
      ],
    ],
    "values": [
      [
        -13.3,
        54.39,
      ],
      [
        15.01,
        61.72,
      ],
      [
        6.75,
        31.15,
      ],
      [
        2.79,
        15.23,
      ],
    ],
  },
  "input": {
    "count": 11,
  },
  "invalidData": Map {
    "test" => [
      false,
      false,
      false,
      true,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
    ],
    "series-a" => [
      true,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      false,
    ],
    "series-b" => [
      false,
      false,
      false,
      false,
      true,
      false,
      false,
      false,
      false,
      true,
      false,
    ],
    "series-c" => [
      false,
      false,
      false,
      false,
      true,
      false,
      true,
      false,
      false,
      false,
      false,
    ],
  },
  "invalidDataCount": Map {
    "test" => 1,
    "series-a" => 1,
    "series-b" => 2,
    "series-c" => 2,
  },
  "invalidKeyCount": Map {},
  "invalidKeys": Map {},
  "keys": [
    Map {
      "test" => [
        "2009",
        "2010",
        "2011",
        "2012",
        "2013",
        "2014",
        "2015",
        "2016",
        "2017",
        "2018",
        "2019",
      ],
    },
  ],
  "optimizations": Any<Object>,
  "partialValidDataCount": 6,
  "scopes": Set {
    "test",
    "series-a",
    "series-b",
    "series-c",
  },
  "time": Any<Number>,
  "type": "ungrouped",
  "version": Any<Number>,
  Symbol(domain-ranges): Map {},
  Symbol(key-sort-orders): Map {},
  Symbol(column-sort-orders): Map {},
  Symbol(domain-bands): Map {},
  Symbol(reducer-bands): Map {},
}
`;

exports[`DataExtractor missing and invalid data processing should generated the expected results 1`] = `
{
  "aggregation": undefined,
  "columnNeedValueOf": [
    false,
    false,
    false,
    false,
  ],
  "columnScopes": [
    Set {
      "test",
    },
    Set {
      "test",
    },
    Set {
      "test",
    },
    Set {
      "test",
    },
  ],
  "columns": [
    [
      null,
      54.39,
      44.03,
      NaN,
      null,
      17.75,
      -13.3,
      -8.94,
      null,
      3.2,
      2.7,
    ],
    [
      NaN,
      null,
      15.01,
      25.99,
      31.71,
      null,
      42.27,
      47.79,
      51.76,
      null,
      61.72,
    ],
    [
      26.85,
      31.15,
      null,
      22.69,
      NaN,
      14.77,
      null,
      8.97,
      6.75,
      NaN,
      null,
    ],
    [
      2.79,
      4.22,
      5.94,
      null,
      NaN,
      12.63,
      NaN,
      null,
      14.54,
      14.44,
      15.23,
    ],
  ],
  "dataSources": Map {
    "test" => [
      {
        "chrome": "illegal value",
        "firefox": 26.85,
        "safari": 2.79,
        "year": "2009",
      },
      {
        "firefox": 31.15,
        "ie": 54.39,
        "safari": 4.22,
        "year": "2010",
      },
      {
        "chrome": 15.01,
        "ie": 44.03,
        "safari": 5.94,
        "year": "2011",
      },
      {
        "chrome": 25.99,
        "firefox": 22.69,
        "ie": "illegal value",
        "year": "2012",
      },
      {
        "chrome": 31.71,
        "firefox": undefined,
        "safari": undefined,
        "year": "2013",
      },
      {
        "firefox": 14.77,
        "ie": 17.75,
        "safari": 12.63,
        "year": "2014",
      },
      {
        "chrome": 42.27,
        "ie": -13.3,
        "safari": "illegal value",
        "year": "2015",
      },
      {
        "chrome": 47.79,
        "firefox": 8.97,
        "ie": -8.94,
        "year": "2016",
      },
      {
        "chrome": 51.76,
        "firefox": 6.75,
        "safari": 14.54,
        "year": "2017",
      },
      {
        "firefox": "illegal value",
        "ie": 3.2,
        "safari": 14.44,
        "year": "2018",
      },
      {
        "chrome": 61.72,
        "ie": 2.7,
        "safari": 15.23,
        "year": "2019",
      },
    ],
  },
  "defs": {
    "allScopesHaveSameDefs": true,
    "keys": [
      {
        "index": 0,
        "missing": Map {},
        "property": "year",
        "scopes": [
          "test",
        ],
        "type": "key",
        "valueType": "category",
      },
    ],
    "values": [
      {
        "groupId": undefined,
        "id": undefined,
        "index": 0,
        "invalidValue": NaN,
        "missing": Map {},
        "missingValue": null,
        "property": "ie",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "validation": [Function],
        "valueType": "range",
      },
      {
        "groupId": undefined,
        "id": undefined,
        "index": 1,
        "invalidValue": NaN,
        "missing": Map {},
        "missingValue": null,
        "property": "chrome",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "validation": [Function],
        "valueType": "range",
      },
      {
        "groupId": undefined,
        "id": undefined,
        "index": 2,
        "invalidValue": NaN,
        "missing": Map {},
        "missingValue": null,
        "property": "firefox",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "validation": [Function],
        "valueType": "range",
      },
      {
        "groupId": undefined,
        "id": undefined,
        "index": 3,
        "invalidValue": NaN,
        "missing": Map {},
        "missingValue": null,
        "property": "safari",
        "scopes": [
          "test",
        ],
        "type": "value",
        "useScopedValues": false,
        "validation": [Function],
        "valueType": "range",
      },
    ],
  },
  "domain": {
    "keys": [
      [
        "2009",
        "2010",
        "2011",
        "2012",
        "2013",
        "2014",
        "2015",
        "2016",
        "2017",
        "2018",
        "2019",
      ],
    ],
    "values": [
      [
        -13.3,
        54.39,
      ],
      [
        15.01,
        61.72,
      ],
      [
        6.75,
        31.15,
      ],
      [
        2.79,
        15.23,
      ],
    ],
  },
  "input": {
    "count": 11,
  },
  "invalidData": Map {
    "test" => [
      true,
      false,
      false,
      true,
      true,
      false,
      true,
      false,
      false,
      true,
      false,
    ],
  },
  "invalidDataCount": Map {
    "test" => 5,
  },
  "invalidKeyCount": Map {},
  "invalidKeys": Map {},
  "keys": [
    Map {
      "test" => [
        "2009",
        "2010",
        "2011",
        "2012",
        "2013",
        "2014",
        "2015",
        "2016",
        "2017",
        "2018",
        "2019",
      ],
    },
  ],
  "optimizations": Any<Object>,
  "partialValidDataCount": 6,
  "scopes": Set {
    "test",
  },
  "time": Any<Number>,
  "type": "ungrouped",
  "version": Any<Number>,
  Symbol(domain-ranges): Map {},
  Symbol(key-sort-orders): Map {},
  Symbol(column-sort-orders): Map {},
  Symbol(domain-bands): Map {},
  Symbol(reducer-bands): Map {},
}
`;
